<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/vertical_main_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/horizontal_main_margin"
        android:layout_marginLeft="@dimen/horizontal_main_margin"
        android:weightSum="1">

        <com.example.bhoomi.lms.Student.Constants.MyMediumText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.95"
            android:text="@string/update_sub_categoryy"
            android:gravity="center_vertical"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"/>

        <ImageView
            android:layoutDirection="ltr"
            android:id="@+id/close_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_close"
            android:layout_weight="0.05"/>
    </LinearLayout>



    <EditText
        android:layout_marginLeft="@dimen/horizontal_main_margin"
        android:layout_marginRight="@dimen/horizontal_main_margin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/select_category"
        android:focusable="false"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:id="@+id/spinner_category"
        android:textColor="@color/colorPrimary"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/horizontal_main_margin"
        >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_qtitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.9"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/qtitle_textInputEditText"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/subcat_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/colorPrimary" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>



    <RadioGroup
        android:id="@+id/radiogrp_stts"
        android:layout_margin="@dimen/horizontal_main_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active"/>

        <RadioButton
            android:id="@+id/radio_deactive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deactive"/>

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/vertical_main_margin"
        android:weightSum="1">

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="0.2"/>

        <Button
            android:id="@+id/buttn_save"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/update"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_green_button"/>

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="0.2"/>

    </LinearLayout>





</LinearLayout>