<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".Teacher.Activity.Curriculum_Activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_curriculum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <com.example.bhoomi.lms.Student.Constants.MyMediumText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curriculum"
            android:textColor="@android:color/white"
            android:gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Medium"/>

    </android.support.v7.widget.Toolbar>

    <com.example.bhoomi.lms.Student.Constants.MyMediumText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_list"
        android:textColor="@android:color/black"
        android:layout_margin="@dimen/horizontal_main_margin"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_curriculum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>

    <com.example.bhoomi.lms.Student.Constants.MyMediumText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_section_found"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@android:color/black"
        android:layout_margin="@dimen/horizontal_main_margin"
        android:id="@+id/noSetions"/>


</RelativeLayout>